nutriment requirements and some fixes

--- a/nano/templates/dna_console.tmpl
+++ b/nano/templates/dna_console.tmpl
@@ -30,7 +30,7 @@
 <br>
 <hr>
 <tr><td>{{:helper.link('Save personal enzymes', 'link', {'save_pe' : 1}, data.occupied ? null : 'disabled')}}</td></tr>
-<tr><td>{{:helper.link('Save mutations', 'circle-plus', {'save_ue' : 1}, data.occupied ? null : 'disabled')}}</td></tr>
+<tr><td>{{:helper.link('Save mutations', 'link', {'save_ue' : 1}, data.occupied ? null : 'disabled')}}</td></tr>
 <tr><td>{{:helper.link('Eject disc','eject',{'eject' : 1}, data.disc_inserted ? null : 'disabled')}}</td></tr>
 
 <h2>Chrysalis Log:</h2>
