more test server fixes

--- a/nano/templates/dna_printer.tmpl
+++ b/nano/templates/dna_printer.tmpl
@@ -10,7 +10,7 @@
 		</tr>
 	</table>
 	{{:helper.link('Make imprinter', 'circle-plus', {'make_meat_cube' : 1}, data.can_print ? null : 'disabled')}}
-	{{:helper.link('Make antidot', 'circle-plus', {'make_worm_cube' : 1}, null)}}
+	{{:helper.link('Make antidote', 'circle-plus', {'make_worm_cube' : 1}, null)}}
 	{{:helper.link('Eject disc','eject',{'eject_usb' : 1}, data.disc_inserted ? null : 'disabled')}}
 	{{:helper.link('Eject beaker','eject',{'eject_beaker' : 1}, data.beaker_inserted ? null : 'disabled')}}
 	<br>
